Tabla Producto Y Nueva Sesion

--- a/views/partials/modalLogin.hbs
+++ b/views/partials/modalLogin.hbs
@@ -24,10 +24,13 @@
                         </div>
 
                         <div class="form-group">
-                            <input type="email" class="form-control form-control-user" name="user" placeholder="Correo Electrónico...">
+                            <input type="email" class="form-control form-control-user" name="user" placeholder="Correo Electrónico..." required>
                         </div>
                         <div class="form-group">
-                            <input type="password" class="form-control form-control-user" name="pass" placeholder="Contraseña...">
+                            <input type="password" class="form-control form-control-user" name="pass" placeholder="Contraseña..." required>
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control form-control-user" name="pass2" placeholder="Confirmar Contraseña..." required>
                         </div>
                         <hr>
                          <input type="submit" class="btn btn-primary btn-user btn-block" value="Crear Cuenta">
