--- a/views/partials/sidebarAdmin.hbs
+++ b/views/partials/sidebarAdmin.hbs
@@ -62,6 +62,7 @@
                         <a class="collapse-item" href="/tableUser">Usuarios</a>
                         <a class="collapse-item" href="/tableProvee">Proveedores</a>
                         <a class="collapse-item" href="/tableClientes">Clientes</a>
+                        <a class="collapse-item" href="/tableProductos">Productos</a>
                     </div>
                 </div>
             </li>
