--- a/views/partials/sidebarRepartidor.hbs
+++ b/views/partials/sidebarRepartidor.hbs
@@ -2,23 +2,12 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/admin">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/repartidor">
                 <img src="assets/img/logoT.png" width="40%" alt="">
 
-                <div class="sidebar-brand-text mx-3">ADMIN</div>
+                <div class="sidebar-brand-text mx-3">Repartidor</div>
             </a>
 
-            <!-- Divider -->
-            <hr class="sidebar-divider my-0">
-
-            <!-- Nav Item - Dashboard -->
-            <li class="nav-item">
-                <a class="nav-link" href="/admin">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span></a>
-            </li>
-
-            <!-- Divider -->
             <hr class="sidebar-divider">
 
             <!-- Heading -->
@@ -27,23 +16,26 @@
             </div>
 
             <!-- Nav Item - Charts -->
+
             <li class="nav-item">
-                <a class="nav-link" href="/cliente">
-                    <i class="fas fa-address-card"></i>
-                    <span>Registrar Cliente</span></a>
+                <a class="nav-link" href="/pagos">
+                    <i class="fas fa-fw fa-comment-dollar"></i>
+                    <span>Pagos</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/producto">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Registrar Producto</span></a>
+                <a class="nav-link" href="/factura">
+                    <i class="fas fa-fw fa-clipboard-list"></i>
+    
+                    <span>Factura</span></a>
             </li>
 
-            <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="/ganancias">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
+    
+                    <span>Resumen Ganancias</span></a>
             </li>
+            
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
