--- a/views/tableProductos.hbs
+++ b/views/tableProductos.hbs
@@ -10,34 +10,36 @@
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">Tabla de Clientes</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">Tabla de Productos</h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th class="text-center">Cedula</th>                    
-                                            <th class="text-center">Nombre</th>
-                                            <th class="text-center">Email</th>
-                                            <th class="text-center">Edad</th>
-                                            <th class="text-center">Género</th>
-                                            <th class="text-center">Teléfono</th>
+                                            <th class="text-center">Nombre</th>                    
+                                            <th class="text-center">Categoría</th>
+                                            <th class="text-center">Proveedor</th>
+                                            <th class="text-center">Color</th>
+                                            <th class="text-center"># en Stock</th>
+                                            <th class="text-center">Precio Venta</th>
+                                            <th class="text-center">Precio Proveedor</th>
                                             <th class="text-center">Modificar</th>
                                             <th class="text-center">Eliminar</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {{#each client}}
+                                        {{#each product}}
                                         <tr>
-                                            <th class="text-center">{{this.cedula_cli}}</th>
-                                            <th class="text-center">{{this.nombre_cli}}</th>
-                                            <th class="text-center">{{this.email}}</th>
-                                            <th class="text-center">{{this.edad}}</th>
-                                            <th class="text-center">{{this.genero}}</th>
-                                            <th class="text-center">{{this.tlf}}</th>
-                                            <th class="text-center"><a href="/editProv/{{this.cod_prov}}" class="btn btn-primary btn-circle"><i class="fas fa-edit"></a></i></th>
-                                            <th class="text-center"><a href="/deleteProv/{{this.cod_prov}}" class="btn btn-danger btn-circle"><i class="fas fa-trash"></i></a></th>
+                                            <th class="text-center">{{this.nombre_prod}}</th>
+                                            <th class="text-center">{{this.id_cat}}</th>
+                                            <th class="text-center">{{this.cod_prov}}</th>
+                                            <th class="text-center">{{this.color}}</th>
+                                            <th class="text-center">{{this.stock}}</th>
+                                            <th class="text-center">{{this.precio_mercado}}</th>
+                                            <th class="text-center">{{this.precio_proveedor}}</th>
+                                            <th class="text-center"><a href="/editProd/{{this.cod_prod}}" class="btn btn-primary btn-circle"><i class="fas fa-edit"></a></i></th>
+                                            <th class="text-center"><a href="/deleteProd/{{this.cod_prod}}" class="btn btn-danger btn-circle"><i class="fas fa-trash"></i></a></th>
                                         </tr>
                                         {{/each}}
                                                                               
@@ -74,4 +76,3 @@
     </script>
     {{/if}}
 </html>
-
