--- a/views/partials/sidebarEmpleado.hbs
+++ b/views/partials/sidebarEmpleado.hbs
@@ -33,12 +33,13 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/pagos">
-                    <i class="fas fa-fw fa-chart-area"></i>
+                    <i class="fas fa-fw fa-comment-dollar"></i>
                     <span>Pagos</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/factura">
-                    <i class="fas fa-fw fa-chart-area"></i>
+                    <i class="fas fa-fw fa-clipboard-list"></i>
+    
                     <span>Factura</span></a>
             </li>
 
