--- a/views/producto.hbs
+++ b/views/producto.hbs
@@ -16,13 +16,10 @@
                         <div class="row">
                             <div class="col-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Código..." name="codigo">
+                                    <input type="text" class="form-control" placeholder="Nombre del Producto..." name="nombre"required>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Nombre del Producto..." name="nombre">
-                                </div>
-                                <div class="form-group">
-                                    <select class="form-control" style="border-radius: 10rem" name="proveedor">
+                                    <select class="form-control" style="border-radius: 10rem" name="proveedor" required>
                                 <option selected>Proveedor...</option>
                                 {{#each prov}}
                                 <option value={{this.cod_prov}}>{{this.nombre_prov}}</option>
@@ -53,7 +50,7 @@
                         <div class="row">
                             <div class="col-sm-12 col-lg-6">
                                 <div class="form-group">
-                                    <select class="form-control" style="border-radius: 10rem" name="categoria">
+                                    <select class="form-control" style="border-radius: 10rem" name="categoria" required>
                                 <option selected>Categoria...</option>
                                 {{#each categoria}}
                                 <option value={{this.id_cat}}>{{this.categoria}}</option>
@@ -63,24 +60,28 @@
                                 <div class="form-group">
                                     <select class="form-control" style="border-radius: 10rem" name="material">
                                 <option selected value="">Material (Opcional)...</option>
+                                <option value="Plastico">Plástico</option>
+                                <option value="Algodon">Algodón</option>
+                                <option value="Polyester">Polyester</option>
+                                <option value="Otro">Otro</option>
                             </select>
                                 </div>
                                 <div class="form-group">
-                                    <input type="number" class="form-control" placeholder="Peso en kg..." name="peso">
+                                    <input type="number" class="form-control" placeholder="Peso en kg... (Opcional)" name="peso" value="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="number" class="form-control" placeholder="Tamaño en cm..." name="cm">
+                                    <input type="number" class="form-control" placeholder="Tamaño en cm...(Opcional)" name="cm">
                                 </div>
                             </div>
                             <div class="col-sm-12 col-lg-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Color..." name="color">
+                                    <input type="text" class="form-control" placeholder="Color..." name="color" required>
                                 </div>
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Talla (Opcional)..." name="talla" value="">
                                 </div>
                                 <div class="form-group">
-                                    <select class="form-control" style="border-radius: 10rem" name="origen">
+                                    <select class="form-control" style="border-radius: 10rem" name="origen" required>
                                 <option selected>Origen...</option>
                                 <option>Estados Unidos</option>
                                 <option>Ecuador</option>
@@ -88,7 +89,7 @@
                             </select>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="N° Stock..." name="stock">
+                                    <input type="number" class="form-control" placeholder="N° Stock..." name="stock" required min="1">
                                 </div>
 
                             </div>
@@ -97,16 +98,14 @@
                         <div class="form-group">
                             <div class="row">
                                 <div class="col-sm-12 col-lg-6">
-                                    <input type="number" class="form-control" placeholder="Precio Mercado..." name="precioMer">
+                                    <input type="number" class="form-control" placeholder="Precio Mercado..." name="precioMer" required>
                                     <br>
                                 </div>
                                 <br>
                                 <div class="col-sm-12 col-lg-6">
-                                    <input type="number" class="form-control" placeholder="Precio Proveedor..." name="precioProv">
+                                    <input type="number" class="form-control" placeholder="Precio Proveedor..." name="precioProv" required>
                                 </div>
                             </div>
-
-
                         </div>
 
                         <hr>
@@ -117,7 +116,6 @@
                     </form>
                 </div>
             </div>
-
 
             {{> footer}}
         </div>
