--- a/views/repartidor.hbs
+++ b/views/repartidor.hbs
@@ -1,22 +1,21 @@
 {{> header }}
 <body id="page-top">
     <div id="wrapper">
-        {{> sidebarAdmin}}
+        {{> sidebarRepartidor}}
         <div id="content-wrapper" class="d-flex flex-column">
             <div id="content">
                 {{> topbar}}
                 <div class="container-fluid">
 
                 <!-- Page Heading -->
-                <h1 class="h3 mb-4 text-gray-800">Bienvenido al Dashboard {{ name }} de InVirtualStore</h1>
+                <h1 class="h3 mb-4 text-gray-800">Bienvenido {{ name }}</h1>
                 <div align ="center">
-                    <img src="assets/img/empleado.jpg" alt="" width="50%" height="50%">
+                    <img src="assets/img/delivery.jpg" alt="" width="40%" height="40%">
                 </div>
+                
 
             </div>
-            </div>
-
-            
+            </div>         
         {{> footer}}   
         </div>
     </div>
