Tabla Productos reparada

--- a/views/tableProductos.hbs
+++ b/views/tableProductos.hbs
@@ -32,8 +32,8 @@
                                         {{#each product}}
                                         <tr>
                                             <th class="text-center">{{this.nombre_prod}}</th>
-                                            <th class="text-center">{{this.id_cat}}</th>
-                                            <th class="text-center">{{this.cod_prov}}</th>
+                                            <th class="text-center">{{this.categoria}}</th>
+                                            <th class="text-center">{{this.nombre_prov}}</th>
                                             <th class="text-center">{{this.color}}</th>
                                             <th class="text-center">{{this.stock}}</th>
                                             <th class="text-center">{{this.precio_mercado}}</th>
