--- a/views/partials/sidebarRepartidor.hbs
+++ b/views/partials/sidebarRepartidor.hbs
@@ -30,10 +30,10 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="/ganancias">
+                <a class="nav-link" href="/listaPedidos">
                     <i class="fas fa-fw fa-table"></i>
     
-                    <span>Resumen Ganancias</span></a>
+                    <span>Lista de Pedidos</span></a>
             </li>
             
 
