--- a/views/pedido.hbs
+++ b/views/pedido.hbs
@@ -42,6 +42,8 @@
                                     <button type="submit" class="btn btn-primary">
                                             <i class="fas fa-search"></i>
                                         </button>
+                                        &nbsp; &nbsp; &nbsp;
+                                    <a href="/cliente" class="btn btn-primary">Nuevo Cliente</a>    
                                 </div>
                             </div>
                         </div>
