--- a/views/pedido.hbs
+++ b/views/pedido.hbs
@@ -133,11 +133,9 @@
                                             </tbody>
                                         </table>
                                     </div>
+                                    
                                     {{#if productos}}
-                                    <form action="/hacerPedido" method="post">
-                                        <button type="submit" class="btn btn-primary">Hacer Pedido</button>
-                                    </form>
-                                        
+                                    <button class="btn btn-primary" data-toggle="modal" data-target="#modalPedido">Hacer Pedido</button>
                                     {{/if}}
                                     
                                 </div>
@@ -158,7 +156,7 @@
         </div>
     </div>
     {{> modalSalir}}
-
+    {{> modalPedido}}
     <!-- Bootstrap core JavaScript-->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
