--- a/views/partials/modalPedido.hbs
+++ b/views/partials/modalPedido.hbs
@@ -21,7 +21,7 @@
                             <input type="text" class="form-control" name="principal" placeholder="Calle Principal..." required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" name="secundaria" placeholder="Calle Secundaria..." required>
+                            <input type="text" class="form-control" name="secundaria" placeholder="Calle Secundaria(Opcional)..." >
                         </div>
                         <hr>
                         <div class="text-center">
