--- a/views/partials/sidebarRepartidor.hbs
+++ b/views/partials/sidebarRepartidor.hbs
@@ -17,11 +17,15 @@
 
             <!-- Nav Item - Charts -->
 
+
+
             <li class="nav-item">
-                <a class="nav-link" href="/pagos">
-                    <i class="fas fa-fw fa-comment-dollar"></i>
-                    <span>Pagos</span></a>
+                <a class="nav-link" href="/listaPedidos">
+                    <i class="fas fa-fw fa-table"></i>
+    
+                    <span>Lista de Pedidos</span></a>
             </li>
+            
             <li class="nav-item">
                 <a class="nav-link" href="/factura">
                     <i class="fas fa-fw fa-clipboard-list"></i>
@@ -30,10 +34,9 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="/listaPedidos">
-                    <i class="fas fa-fw fa-table"></i>
-    
-                    <span>Lista de Pedidos</span></a>
+                <a class="nav-link" href="/tableGanancias">
+                    <i class="fas fa-fw fa-comment-dollar"></i>
+                    <span>Ganancias</span></a>
             </li>
             
 
