--- a/views/partials/sidebarAdmin.hbs
+++ b/views/partials/sidebarAdmin.hbs
@@ -49,6 +49,20 @@
                     <span>Registrar Proveedor</span></a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse3"
+                    aria-expanded="true" aria-controls="collapse3">
+                    <i class="fas fa-shopping-basket"></i>
+                    <span>Pedidos</span>
+                </a>
+                <div id="collapse3" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="/tablePedidos">Todos</a>
+                        <a class="collapse-item" href="/tablePendientes">Pendientes de Pago</a>
+                    </div>
+                </div>
+            </li>
+
             <!-- Nav Item - Tables -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
