--- a/views/tablePedidos.hbs
+++ b/views/tablePedidos.hbs
@@ -1,7 +1,7 @@
 {{> header }}
 <body id="page-top">
     <div id="wrapper">
-        {{> sidebarRepartidor}}
+        {{> sidebarAdmin}}
         <div id="content-wrapper" class="d-flex flex-column">
             <div id="content">
                 {{> topbar}}
@@ -9,8 +9,8 @@
                 <!-- Page Heading -->
                     <!-- DataTales Example -->
                      {{#if resumen}}
-                     <h3 class="m-0 font-weight-bold text-primary">Cliente: {{cli}}</h3>
-                     <h3 class="m-0 font-weight-bold text-primary">Teléfono: {{tel}}</h3>
+                     <h5 class="m-0 font-weight-bold text-primary">Cliente: {{cli}}</h5>
+                     <h5 class="m-0 font-weight-bold text-primary">Teléfono: {{tel}}</h5>
                         <div class="card shadow mb-4">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">Detalles del Pedido: {{codigo}} </h6>
@@ -37,9 +37,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <h5 class="m-0 font-weight-bold text-primary">Total Pedido: ${{a_pagar}}</h5>
-                            <h5 class="m-0 font-weight-bold text-primary"> Registrar Pago: </h5>
-                            <form action="/pagos" method="post"><input type="text" name="id" value="{{codigo}}" style="display:none;"><button type="submit" class="btn btn-primary btn-circle"><i class="fas fa-money-bill-wave"></i></button></form>
+                            <h4 class="m-0 font-weight-bold text-primary">Costo total del Pedido: ${{a_pagar}}</h4>
                         </div>
                     </div>
 
@@ -48,7 +46,7 @@
                      {{else}}
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">Lista de Pedidos</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">Todos los Pedidos</h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -58,8 +56,8 @@
                                             <th class="text-center">Código Pedido</th>                    
                                             <th class="text-center">Fecha de Entrega</th>
                                             <th class="text-center">Dirección</th>
+                                            <th class="text-center">Estado</th>
                                             <th class="text-center">Detalles</th>
-                                            <th class="text-center">Registrar Pago</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -68,8 +66,8 @@
                                             <th class="text-center">{{this.cod_ped}}</th>
                                             <th class="text-center">{{this.fecha_entrega}}</th>
                                             <th class="text-center">{{this.calle_principal}} y {{this.calle_secundaria}} </th>
-                                            <th class="text-center"><form action="/listaPedidos" method="post"><input type="text" name="id" value="{{this.cod_ped}}" style="display:none;"><button type="submit" class="btn btn-primary btn-circle"><i class="fas fa-box-open"></i></button></form></th>
-                                            <th class="text-center"><form action="/pagos" method="post"><input type="text" name="id" value="{{this.cod_ped}}" style="display:none;"><button type="submit" class="btn btn-primary btn-circle"><i class="fas fa-money-bill-wave"></i></button></form></th>
+                                            <th class="text-center">{{this.estado}}</th>
+                                            <th class="text-center"><form action="/tablePedidos" method="post"><input type="text" name="id" value="{{this.cod_ped}}" style="display:none;"><button type="submit" class="btn btn-primary btn-circle"><i class="fas fa-box-open"></i></button></form></th>
                                         </tr>
                                         {{/each}}
                                                                               
@@ -90,14 +88,7 @@
 
     {{> modalSalir}}   
     
-<!-- Bootstrap core JavaScript-->
-    <script src="assets/vendor/jquery/jquery.min.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="assets/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Custom scripts for all pages-->
-    <script src="assets/js/sb-admin-2.min.js"></script>
+{{> scripts}} 
 
 </body>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
